# openclaw-anim

./: .gitignore  README.md  config.example.json
desktop/: README.md  index.html  package-lock.json  package.json  vite.config.ts
desktop/src/: main.ts  spine_renderer.ts  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: config.rs  lib.rs  main.rs  sse_client.rs  state_machine.rs
docs/: architecture.md  event-protocol.md  milestones.md  requirements.md
plugin/: index.ts  openclaw.plugin.json  package.json
